🛠️ Fix foto rendering: lege onload attributen verwijderd + mission foto juist

--- a/physiovisit_new_site/index.html
+++ b/physiovisit_new_site/index.html
@@ -481,8 +481,7 @@
                     <div class="service-card">
                         <div class="service-image-container">
                             <img src="assets/img/neurologie.jpeg" alt="Neurologische kinesitherapie aan huis" class="service-image" loading="lazy" style="object-position: center 60%;" width="400" height="480"
-                                 onerror="this.src='assets/img/Neurologie nieuw.jpg';"
-                                 onload="">
+                                 onerror="this.src='assets/img/Neurologie nieuw.jpg';">
                         </div>
                         <div class="service-content">
                             <h3>Kinesitherapie aan Huis</h3>
@@ -508,8 +507,7 @@
                     <div class="service-card">
                         <div class="service-image-container">
                             <img src="assets/img/Kinetec.jpeg" alt="Kinetec apparatuur verhuur" class="service-image" loading="lazy" style="object-position: center 25%;" width="400" height="480"
-                                 onerror="this.src='assets/img/gangrevalidatie nieuw.jpg';"
-                                 onload="">
+                                 onerror="this.src='assets/img/gangrevalidatie nieuw.jpg';">
                         </div>
                         <div class="service-content">
                             <h3>Apparatuur Verhuur - Heel België</h3>
