🖼️ Missie sectie update: nieuwe foto 'ik als kine.jpeg?v=2' met betere positionering (center 85%) en donkere overlay

--- a/physiovisit_new_site/index.html
+++ b/physiovisit_new_site/index.html
@@ -421,7 +421,7 @@
     </section>
 
     <!-- Our Mission Section -->
-    <section class="mission-banner" style="background: linear-gradient(135deg, #6D8299, #A3BFFA); min-height: 400px; padding: 60px 0; color: white;">
+    <section class="mission-banner" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.4)), url('assets/img/ik als kine.jpeg?v=2') center 85%/cover no-repeat, linear-gradient(135deg, #6D8299, #A3BFFA); min-height: 400px; padding: 60px 0; color: white;">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
