--- a/physiovisit_new_site/index.html
+++ b/physiovisit_new_site/index.html
@@ -348,7 +348,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero-section">
+    <section class="hero-section" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('assets/img/homepage.png') center/cover no-repeat;">
         <div class="hero-bg-overlay"></div>
         <div class="container">
             <div class="row">
