--- a/physiovisit_new_site/index.html
+++ b/physiovisit_new_site/index.html
@@ -26,7 +26,7 @@
         .container{width:100%;max-width:1140px;margin:0 auto;padding:0 15px}
         .navbar{display:flex;align-items:center;justify-content:space-between;background:#fff;padding:15px 0;box-shadow:0 2px 10px rgba(0,0,0,.1);position:sticky;top:0;z-index:1000}
         .navbar-brand{font-size:1.5rem;color:#2F2F2F;text-decoration:none;font-weight:700}
-        .hero-section{position:relative;min-height:100vh;display:flex;align-items:center;padding:200px 0 100px;background:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));color:#fff;overflow:hidden}
+        .hero-section{position:relative;min-height:100vh;display:flex;align-items:center;padding:200px 0 100px;background:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));color:#fff;overflow:hidden}
         .hero-content{z-index:2;position:relative}
         .hero-content h1{font-size:3rem;margin:0 0 20px;text-shadow:2px 2px 4px rgba(0,0,0,.7);font-weight:700;line-height:1.2}
         .hero-content p{font-size:1.3rem;margin:0 0 30px;opacity:.95;text-shadow:1px 1px 2px rgba(0,0,0,.5)}
@@ -528,7 +528,7 @@
                 <div class="col-md-6">
                     <div class="service-card">
                         <div class="service-image-container">
-                            <img src="assets/img/neurologie.jpeg?v=8" alt="Neurologische kinesitherapie aan huis" class="service-image" loading="lazy" decoding="async" style="object-position: center 60%; display: block !important; visibility: visible !important;" width="400" height="480" onerror="this.src='assets/img/Neurologie nieuw.jpg';">
+                            <img src="assets/img/neurologie.jpeg?v=9" alt="Neurologische kinesitherapie aan huis" class="service-image" loading="lazy" decoding="async" style="object-position: center 60%; display: block !important; visibility: visible !important; opacity: 1 !important;" width="400" height="480" onerror="this.src='assets/img/Neurologie nieuw.jpg';">
                         </div>
                         <div class="service-content">
                             <h3>Kinesitherapie aan Huis</h3>
@@ -553,7 +553,7 @@
                 <div class="col-md-6">
                     <div class="service-card">
                         <div class="service-image-container">
-                            <img src="assets/img/Kinetec.jpeg?v=8" alt="Kinetec apparatuur verhuur" class="service-image" loading="lazy" decoding="async" style="object-position: center 25%; display: block !important; visibility: visible !important;" width="400" height="480" onerror="this.src='assets/img/gangrevalidatie nieuw.jpg';">
+                            <img src="assets/img/Kinetec.jpeg?v=9" alt="Kinetec apparatuur verhuur" class="service-image" loading="lazy" decoding="async" style="object-position: center 25%; display: block !important; visibility: visible !important; opacity: 1 !important;" width="400" height="480" onerror="this.src='assets/img/gangrevalidatie nieuw.jpg';">
                         </div>
                         <div class="service-content">
                             <h3>Apparatuur Verhuur - Heel België</h3>
