--- a/physiovisit_new_site/index.html
+++ b/physiovisit_new_site/index.html
@@ -44,13 +44,14 @@
         h2{font-size:2.5rem}h3{font-size:1.8rem}
         .mission-banner{padding:80px 0;position:relative;color:#fff;text-align:center}
         @media (max-width:768px){
-            .hero-section{min-height:100vh;padding:120px 0 60px;contain:layout style paint;background:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)) !important}
+            .hero-section{min-height:100vh;padding:120px 0 60px;contain:layout style paint;background:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url('assets/img/homepage.png') right center/cover no-repeat !important}
+            .hero-bg-img{object-position:right center !important}
             .hero-content{min-height:300px !important;padding:20px 0}
             .hero-content h1{font-size:2.2rem;margin-bottom:15px;line-height:1.3;color:#fff !important;text-shadow:2px 2px 4px rgba(0,0,0,.8) !important}
             .hero-content p{font-size:1.1rem;margin-bottom:25px;color:#fff !important;text-shadow:1px 1px 2px rgba(0,0,0,.6) !important}
             .btn{display:block;margin:8px 0;text-align:center;width:100%;max-width:280px;margin-left:auto;margin-right:auto}
             .section{padding:50px 0}
-            .service-image-container{height:300px}
+            .service-image-container{height:400px}
             .service-image{display:block !important;visibility:visible !important}
         }
     </style>
@@ -396,7 +397,7 @@
 
     <!-- Hero Section -->
     <section class="hero-section" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('assets/img/homepage.png') center/cover no-repeat;">
-        <img src="assets/img/homepage.png" alt="PhysioVisit hero background" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;z-index:-1;" loading="eager" fetchpriority="high" width="1200" height="800">
+        <img src="assets/img/homepage.png" alt="PhysioVisit hero background" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;z-index:-1;" class="hero-bg-img" loading="eager" fetchpriority="high" width="1200" height="800">
         <div class="hero-bg-overlay"></div>
         <div class="container">
             <div class="row">
