--- a/physiovisit_new_site/index.html
+++ b/physiovisit_new_site/index.html
@@ -44,8 +44,8 @@
         h2{font-size:2.5rem}h3{font-size:1.8rem}
         .mission-banner{padding:80px 0;position:relative;color:#fff;text-align:center}
         @media (max-width:768px){
-            .hero-section{min-height:100vh;padding:120px 0 60px;contain:layout style paint;background:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url('assets/img/homepage.png') right center/cover no-repeat !important}
-            .hero-bg-img{object-position:right center !important}
+            .hero-section{min-height:100vh;padding:120px 0 60px;contain:layout style paint;background:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url('assets/img/homepage.png') left center/cover no-repeat !important}
+            .hero-bg-img{object-position:left center !important}
             .hero-content{min-height:300px !important;padding:20px 0}
             .hero-content h1{font-size:2.2rem;margin-bottom:15px;line-height:1.3;color:#fff !important;text-shadow:2px 2px 4px rgba(0,0,0,.8) !important}
             .hero-content p{font-size:1.1rem;margin-bottom:25px;color:#fff !important;text-shadow:1px 1px 2px rgba(0,0,0,.6) !important}
